2007-07-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/conf/configobj.py (ConfigObj._quote):
	Quote strings containing "#".

2007-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/RELEASING:
	Fix all remaining errors.

2007-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/__init__.py:
	  Bumped version number to 0.8.

	RELEASE 0.8

2007-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/conf.spec:
	* data/gaupol.gtk.conf.spec:
	* gaupol/gtk/conf/__init__.py:
	* setup.py:
	Rename conf.spec to gaupol.gtk.conf.spec.

2007-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/RELEASING:
	Update branch and tag names.

2007-07-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/add-changelog:
	* tools/generate-tests:
	* tools/hide:
	* tools/list-glade:
	* tools/pylint:
	Fix minor errors and style issues.

2007-07-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* TODO:
	Clean up to reflect what has actually been done.

2007-07-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/debug.py (_print_traceback):
	Add indented string to code_lines.

2007-07-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/debug.py (_print_traceback):
	Indent code manually to preserve formatting if copied.

2007-07-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/save.py:
	* gaupol/gtk/conf/__init__.py:
	* gaupol/util.py:
	Fix remaining errors so that all unittests pass.

2007-07-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py:
	* gaupol/gtk/actions/format.py:
	* gaupol/gtk/actions/__init__.py:
	* gaupol/gtk/actions/menu.py:
	* gaupol/gtk/actions/view.py:
	* gaupol/gtk/const.py:
	* gaupol/gtk/unittest/case.py:
	Fix or disable all errors reported by pylint.

2007-07-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/data/apidocs.css:
	* tools/data/code.css:
	Fix colors to not be too light.

	* tools/pydoctor:
	Fix source code links.

2007-07-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* COPYING:
	* gaupol/*.py:
	* gaupol/gtk/dialogs/about.py: