@@ -128,7 +128,7 @@ def connect_text_view(text_view):
     width = layout.get_pixel_size()[0]
     text_view.set_border_window_size(gtk.TEXT_WINDOW_RIGHT, width + 4)
     handler_id = text_view.connect("expose-event", _on_text_view_expose_event)
-    text_view.set_data("lengthlib_handler_id", handler_id)
+    text_view.set_data("ruler_handler_id", handler_id)
     return handler_id
 
 @gaupol.util.asserted_return
@@ -136,9 +136,9 @@ def disconnect_text_view(text_view):
     """Disconnect text view from showing line lengths in the margin."""
 
     text_view.set_border_window_size(gtk.TEXT_WINDOW_RIGHT, 0)
-    handler_id = text_view.get_data("lengthlib_handler_id")
+    handler_id = text_view.get_data("ruler_handler_id")
     assert handler_id is not None
-    text_view.set_data("lengthlib_handler_id", None)
+    text_view.set_data("ruler_handler_id", None)
     return text_view.disconnect(handler_id)
 
 def func(text):
